--- a/olca-app/OSGI-INF/l10n/bundle.properties
+++ b/olca-app/OSGI-INF/l10n/bundle.properties
@@ -11,7 +11,43 @@ page.name.1 = Global parameters
 page.name.2 = Locations
 page.name.3 = Settings for calculation methods
 page.name.4 = Memory
-property.value = Copyright (c) 2007 - 2013 GreenDelta. All rights reserved. \nThis program and the accompanying materials are made available under the terms of the Mozilla Public License v1.1 which accompanies this distribution, and is available at http://www.openlca.org/uploads/media/MPL-1.1.html \nContributors: GreenDelta - initial API and implementation \n\n www.greendelta.com tel.: +49 30 4849 6030 mail: gdtc@greendelta.com
+property.value = Copyright (c) 2007 -#Properties file for org.openlca.io.ui
+
+# wizard names and descriptions
+wizard.name = EcoSpold 1
+wizard.description = Import EcoSpold xml files or zip files containing EcoSpold xml files
+wizard.name.0 = Processes - EcoSpold 1
+wizard.description.0 = Export processes to EcoSpold1 xml files
+wizard.name.1 = LCIA methods - EcoSpold 1
+wizard.description.1 = Export LCIA methods to EcoSpold1 xml files
+wizard.name.2 = ILCD
+wizard.description.2 = Import a zip file containing ILCD xml files
+wizard.name.3 = Processes
+wizard.description.3 = Export processes to ILCD xml files
+wizard.name.4 = Flows
+wizard.description.4 = Export flows to ILCD xml files
+wizard.name.5 = Flow properties 
+wizard.description.5 = Export flow properties to ILCD xml files
+wizard.name.6 = Unit groups
+wizard.description.6 = Export unit groups to ILCD xml files
+wizard.name.7 = Product systems
+wizard.description.7 = Export product systems to ILCD xml files
+
+# category labels
+category.name = EcoSpold1
+category.name.0 = ILCD
+
+ilcd.import.description = Import ILCD data sets from an ILCD package.
+Actors = Actors
+Sources = Sources
+
+#Properties for org.openlca.ilcd.network
+ilcd.net.import.category.name = ILCD Network Import
+ilcd.net.import.wizard.name = ILCD Network Import
+ilcd.net.import.wizard.description = Import a data set from the ILCD Network into a database.
+ilcd.net.export.category.name = ILCD Network Export
+ilcd.net.export.wizard.name = ILCD Network Export
+ilcd.net.preference.page.name = ILCD Network 2013 GreenDelta. All rights reserved. \nThis program and the accompanying materials are made available under the terms of the Mozilla Public License v1.1 which accompanies this distribution, and is available at http://www.openlca.org/uploads/media/MPL-1.1.html \nContributors: GreenDelta - initial API and implementation \n\n www.greendelta.com tel.: +49 30 4849 6030 mail: gdtc@greendelta.com
 navigatorContent.name = Dataprovider
 commonFilter.name = Empty categories
 commonFilter.name.0 = Product flows
