Removed unnecessary extension points; Changed IDs in Extensions to be consistent;

--- a/olca-app/OSGI-INF/l10n/bundle.properties
+++ b/olca-app/OSGI-INF/l10n/bundle.properties
@@ -13,12 +13,12 @@ page.name.3 = Settings for calculation methods
 page.name.4 = Memory
 property.value = Copyright (c) 2007 -#Properties file for org.openlca.io.ui
 
-# wizard names and descriptions
+# export wizard names and descriptions
 wizard.name = EcoSpold 1
 wizard.description = Import EcoSpold xml files or zip files containing EcoSpold xml files
-wizard.name.0 = Processes - EcoSpold 1
+wizard.name.0 = Processes
 wizard.description.0 = Export processes to EcoSpold1 xml files
-wizard.name.1 = LCIA methods - EcoSpold 1
+wizard.name.1 = LCIA methods
 wizard.description.1 = Export LCIA methods to EcoSpold1 xml files
 wizard.name.2 = ILCD
 wizard.description.2 = Import a zip file containing ILCD xml files
