Added List DataBinding and TableViewer concept; Implemented UnitViewer

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -5,7 +5,7 @@ Actors_WizardMessage = Creates a new actor
 
 Actors_WizardTitle = New actor
 
-AddAction_Text = Add new {0}
+AddAction_Text = Create new
 
 AddCategoryText = Add new child category
 
@@ -801,7 +801,7 @@ Properties = Properties
 
 Reload = Reload
 
-RemoveAction_Text = Remove selected {0}
+RemoveAction_Text = Remove selected
 
 RemoveParameterText = Remove selected parameters
 
