--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -7,7 +7,7 @@ Actors_WizardMessage = Erstellt einen neuen Kontaktdatensatz
 
 Actors_WizardTitle = Neuer Kontaktdatensatz
 
-AddAction_Text = F\u00FCge {0} hinzu
+AddAction_Text = Erstelle neues Element
 
 AddCategoryText = Eine Neue Unterkategorie hinzuf\u00FCgen
 
@@ -802,7 +802,7 @@ Properties = Eigenschaften
 
 Reload = Erneut laden
 
-RemoveAction_Text = Entferne {0}
+RemoveAction_Text = Entferne ausgewählte Elemente
 
 RemoveParameterText = Entferne ausgew\u00E4hlte Parameter
 
