Refactored Messages from LCIA to Impact

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -49,7 +49,7 @@ Calculating = Calculating aggregated results
 
 CalculatingLCI = Calculating LCI result
 
-CalculatingLCIA = Calculating LCIA result
+CalculatingImpact = Calculating impact result
 
 CalculationPreferencePage_Name = Name
 
@@ -133,9 +133,9 @@ Common_ImpactCategory = Impact category
 
 Common_Inputs = Inputs
 
-Common_LCIAFactors = LCIA factors
+Common_ImpactFactors = Impact factors
 
-Common_LCIAMethodTitle = LCIA method
+Common_ImpactMethodTitle = Impact method
 
 Common_Location = Location
 
@@ -399,7 +399,7 @@ IsUsedAsAndCannotBeDeleted = {0} is used by {1} {2} as {3} and therefore cannot 
 
 IsUsedAsAndWillBeRemoved = {0} is used by {1} {2} as {3} and will be removed
 
-LCIAMethod = LCIA method
+ImpactMethod = Impact method
 
 Language = Language;
 
@@ -415,7 +415,7 @@ Loading = Loading {0}
 
 LoadingLCI = Loading LCI result
 
-LoadingLCIAMethod = Loading LCIA method
+LoadingImpactMethod = Loading impact method
 
 LoadingPS = Loading product system
 
@@ -435,9 +435,9 @@ Menu_ShowViews = Show &views
 
 Menu_Window = &Window
 
-Methods_AddLCIACategoryText = Add new lCIA category
+Methods_AddImpactCategoryText = Add new impact category
 
-Methods_AddLCIAFactorText = Add new LCIA factor to selected LCIA category
+Methods_AddImpactFactorText = Add new impact factor to selected impact category
 
 Methods_AddNormalizationWeightingSet = Add a new normalization/weighting set
 
@@ -449,21 +449,21 @@ Methods_NormalizationWeightingSet = Normalization/Weighting set
 
 Methods_NormalizationWeightingSets = Normalization/Weighting sets
 
-Methods_RemoveLCIACategoryText = Remove selected lCIA category
+Methods_RemoveImpactCategoryText = Remove selected impact category
 
-Methods_RemoveLCIAFactorText = Remove selected LCIA factor from selected LCIA category
+Methods_RemoveImpactFactorText = Remove selected impact factor from selected impact category
 
 Methods_RemoveNormalizationWeightingSet = Remove selected normalization/weighting set
 
-Methods_SelectLCIACategory = Select an LCIA category
+Methods_SelectImpactCategory = Select an impact category
 
 Methods_Value = Value
 
 Methods_WeightingFactor = Weighting factor
 
-Methods_WizardMessage = Creates a new LCIA method
+Methods_WizardMessage = Creates a new impact method
 
-Methods_WizardTitle = New LCIA method
+Methods_WizardTitle = New impact method
 
 MinimumCharactersError = Name must be at least 4 characters.
 
@@ -749,7 +749,7 @@ Projects_Characterization = Characterization
 
 Projects_ChartSectionLabel = Chart
 
-Projects_CompareProductSystemsForMethod = Compare product systems for LCIA method {0}
+Projects_CompareProductSystemsForMethod = Compare product systems for impact method {0}
 
 Projects_CreationDate = Creation date
 
@@ -763,7 +763,7 @@ Projects_Goal = Goal
 
 Projects_GoalAndScopeInfoSectionLabel = Goal and scope
 
-Projects_LCIAMethod = LCIA method
+Projects_ImpactMethod = Impact method
 
 Projects_LastModificationDate = Last modification date
 
@@ -781,7 +781,7 @@ Projects_RemoveProductSystemText = Remove selected product system
 
 Projects_SelectAll = Select all
 
-Projects_SelectCategories = Select LCIA categories to compare
+Projects_SelectCategories = Select impact categories to compare
 
 Projects_SelectNone = Deselect all
 
@@ -825,7 +825,7 @@ Results_Chart = chart
 
 Results_CreatingInfoSheet = Creating info sheet
 
-Results_CreatingLCIASheet = Creating LCIA sheets
+Results_CreatingImpactSheet = Creating impact sheets
 
 Results_CreatingLCISheet = Creating LCI sheet
 
@@ -849,15 +849,15 @@ Results_Information = Information
 
 Results_LCI = Life cycle inventory
 
-Results_LCIACategory = LCIA Category
+Results_ImpactCategory = Impact Category
 
-Results_LCIAMethod = LCIA method
+Results_ImpactMethod = Impact method
 
-Results_LCIAMethodUsed = LCIA Method used
+Results_ImpactMethodUsed = Impact Method used
 
-Results_LCIAResultSavedMessage = The result was saved successfully into LCIA results
+Results_ImpactResultSavedMessage = The result was saved successfully into impact results
 
-Results_LCIAResultSavedTitle = LCIA result saved
+Results_ImpactResultSavedTitle = Impact result saved
 
 Results_LCIOf = Life cycle inventory of {0}
 
@@ -879,7 +879,7 @@ Results_SAVE_AS_PROCESS_QUESTION = Do you want to save the LCI result as new pro
 
 Results_SAVE_AS_PROCESS_TITLE = Save as process
 
-Results_SAVE_LCIA_RESULT = Save LCIA result
+Results_SAVE_IMPACT_RESULT = Save impact result
 
 Results_SettingUp = Setting up
 
@@ -907,7 +907,7 @@ Sankey_ActionText = Set sankey diagram options
 
 Sankey_AnalyseFlow = Analyse flow
 
-Sankey_AnalyseLCIA = Analyse LCIA category
+Sankey_AnalyseImpact = Analyse impact category
 
 Sankey_ClickHere = Please click here to set new options
 
@@ -1119,9 +1119,9 @@ Units_Formula = Formula
 
 Units_IsReference = Is reference
 
-Units_LCIAFactors = LCIA factors
+Units_ImpactFactors = Impact factors
 
-Units_LCIAMethod = LCIA method
+Units_ImpactMethod = Impact method
 
 Units_Process = process
 
@@ -1181,7 +1181,7 @@ Unit=Unit
 Flows=flows
 UnitGroups=unit groups
 FlowProperties=flow properties
-LCIAMethods=LCIA methods
+ImpactMethods=Impact methods
 Actors = actors
 Source = Source
 Sources = sources
