--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -51,7 +51,7 @@ Calculating = Berechne aggregierte Ergebnisse
 
 CalculatingLCI = Berechne LCI Ergebnisse
 
-CalculatingLCIA = Berechne LCIA Ergebnisse
+CalculatingImpact = Berechne Wirkungsergebnisse
 
 CalculationPreferencePage_Name = Name
 
@@ -135,9 +135,9 @@ Common_ImpactCategory = Wirkungskategorie
 
 Common_Inputs = Inputs
 
-Common_LCIAFactors = LCIA Faktoren
+Common_ImpactFactors = Wirkungsfaktoren
 
-Common_LCIAMethodTitle = LCIA Methode
+Common_ImpactMethodTitle = Wirkungsmethode
 
 Common_Location = Ort
 
@@ -399,7 +399,7 @@ IsUsedAsAndCannotBeDeleted = {0} wird von {1} {2} als {3} benutzt und kann nicht
 
 IsUsedAsAndWillBeRemoved = {0} wird von {1} {2} als {3} benutzt und wird entfernt
 
-LCIAMethod = LCIA Methode
+ImpactMethod = Wirkungsmethode
 
 Language = Sprache;
 
@@ -415,7 +415,7 @@ Loading = Lade {0}
 
 LoadingLCI = Lade LCI Ergebnisse
 
-LoadingLCIAMethod = Lade LCIA Methode
+LoadingImpactMethod = Lade Impactmethode
 
 LoadingPS = Lade Produktsystem
 
@@ -435,9 +435,9 @@ Menu_ShowViews = &Sichten anzeigen
 
 Menu_Window = &Fenster
 
-Methods_AddLCIACategoryText = F\u00FCge eine neue LCIA Kategorie hinzu
+Methods_AddImpactCategoryText = F\u00FCge eine neue Wirkungskategorie hinzu
 
-Methods_AddLCIAFactorText = F\u00FCge einen neuen LCIA Faktor zur ausgew\u00E4hlten LCIA Kategorie hinzu
+Methods_AddImpactFactorText = F\u00FCge einen neuen Wirkungsfaktor zur ausgew\u00E4hlten Wirkungskategorie hinzu
 
 Methods_AddNormalizationWeightingSet = F\u00FCge ein neues Normalisierungs-/Gewichtungsset
 
@@ -449,21 +449,21 @@ Methods_NormalizationWeightingSet = Normalisierungs-/Gewichtungsset
 
 Methods_NormalizationWeightingSets = Normalisierungs-/Gewichtungssets
 
-Methods_RemoveLCIACategoryText = Entferne ausgew\u00E4hlte LCIA Kategorie
+Methods_RemoveImpactCategoryText = Entferne ausgew\u00E4hlte Wirkungskategorie
 
-Methods_RemoveLCIAFactorText = Entferne ausgew\u00E4hlten LCIA Faktor aus der ausgew\u00E4hlten LCIA Kategorie
+Methods_RemoveImpactFactorText = Entferne ausgew\u00E4hlten Wirkungsfaktor aus der ausgew\u00E4hlten Wirkungskategorie
 
 Methods_RemoveNormalizationWeightingSet = Ausgew\u00E4hltes Normalisierungs-/Gewichtungsset entfernen
 
-Methods_SelectLCIACategory = W\u00E4hle eine LCIA Kategorie aus
+Methods_SelectImpactCategory = W\u00E4hle eine Wirkungskategorie aus
 
 Methods_Value = Wert
 
 Methods_WeightingFactor = Gewichtungsfaktor
 
-Methods_WizardMessage = Erstellt eine neue LCIA Methode
+Methods_WizardMessage = Erstellt eine neue Wirkungsmethode
 
-Methods_WizardTitle = Neue LCIA Methode
+Methods_WizardTitle = Neue Wirkungsmethode
 
 MinimumCharactersError = Name muss mindestens 4 Zeichen lang sein
 
@@ -750,7 +750,7 @@ Projects_Characterization = Charakterisierung
 
 Projects_ChartSectionLabel = Diagramm
 
-Projects_CompareProductSystemsForMethod = Vergleiche Productsysteme f\u00FCr LCIA Methode {0}
+Projects_CompareProductSystemsForMethod = Vergleiche Productsysteme f\u00FCr Wirkungsmethode {0}
 
 Projects_CreationDate = Erstellungsdatum
 
@@ -764,7 +764,7 @@ Projects_Goal = Zielsetzung
 
 Projects_GoalAndScopeInfoSectionLabel = Zielsetzung und Anwendungsbereich
 
-Projects_LCIAMethod = LCIA Methode
+Projects_ImpactMethod = Wirkungsmethode
 
 Projects_LastModificationDate = Letzte \u00C4nderungen
 
@@ -782,7 +782,7 @@ Projects_RemoveProductSystemText = Entferne ausgew\u00E4hltes Produktsystem
 
 Projects_SelectAll = Alle ausw\u00E4hlen
 
-Projects_SelectCategories = W\u00E4hlen Sie die LCIA Kategorien aus, die Sie vergleichen wollen
+Projects_SelectCategories = W\u00E4hlen Sie die Wirkungskategorien aus, die Sie vergleichen wollen
 
 Projects_SelectNone = Alle abw\u00E4hlen
 
@@ -826,7 +826,7 @@ Results_Chart = chart
 
 Results_CreatingInfoSheet = Erstelle Info-Sheet
 
-Results_CreatingLCIASheet = Erstelle LCIA-Sheets
+Results_CreatingImpactSheet = Erstelle Impact-Sheets
 
 Results_CreatingLCISheet = Erstelle LCI-Sheet
 
@@ -850,15 +850,15 @@ Results_Information = Information
 
 Results_LCI = Sachbilanz
 
-Results_LCIACategory = LCIA Kategorie
+Results_ImpactCategory = Wirkungkategorie
 
-Results_LCIAMethod = LCIA Methode
+Results_ImpactMethod = Wirkungsmethode
 
-Results_LCIAMethodUsed = Angewendete LCIA Methode
+Results_ImpactMethodUsed = Angewendete Wirkungsmethode
 
-Results_LCIAResultSavedMessage = Das Ergebnis wurde erfolgreich unter LCIA Ergebnisse gespeichert
+Results_ImpactResultSavedMessage = Das Ergebnis wurde erfolgreich unter Wirkungsergebnisse gespeichert
 
-Results_LCIAResultSavedTitle = LCIA Ergebnis gespeichert
+Results_ImpactResultSavedTitle = Wirkungsergebnis gespeichert
 
 Results_LCIOf = Sachbilanz von {0}
 
@@ -880,7 +880,7 @@ Results_SAVE_AS_PROCESS_QUESTION = Wollen Sie das LCI - Ergebnis als neuen Proze
 
 Results_SAVE_AS_PROCESS_TITLE = Ergebnis als Prozess speichern
 
-Results_SAVE_LCIA_RESULT = LCIA-Ergebnis speichern
+Results_SAVE_IMPACT_RESULT = Wirkungsergebnis speichern
 
 Results_SettingUp = Richte Exporter ein
 
@@ -908,7 +908,7 @@ Sankey_ActionText = Sankey Diagram Optionen
 
 Sankey_AnalyseFlow = Fluss analysieren
 
-Sankey_AnalyseLCIA = LCIA Kategorie analysieren
+Sankey_AnalyseImpact = Wirkungskategorie analysieren
 
 Sankey_ClickHere = Bitte klicken Sie hier um neue Optionen zu setzen
 
@@ -1120,9 +1120,9 @@ Units_Formula = Formel
 
 Units_IsReference = Ist Referenz
 
-Units_LCIAFactors = LCIA Faktoren
+Units_ImpactFactors = Wirkungsfaktoren
 
-Units_LCIAMethod = LCIA Methode
+Units_ImpactMethod = Wirkungsmethode
 
 Units_Process = Prozess
 
@@ -1180,7 +1180,7 @@ EcoSpoldImportActionText=Importiere EcoSpold1
 Unit=Einheit
 ReferenceUnit=Referenzeinheit
 Source=Quelle
-LCIAMethods=LCIA Methoden
+ImpactMethods=Wirkungsmethoden
 Actors=Personen
 Flows=Fl\u00FCsse
 Sources=Quellen
