Renamed remaining LCIA into impact

--- a/olca-app/OSGI-INF/l10n/bundle.properties
+++ b/olca-app/OSGI-INF/l10n/bundle.properties
@@ -18,8 +18,8 @@ wizard.name = EcoSpold 1
 wizard.description = Import EcoSpold xml files or zip files containing EcoSpold xml files
 wizard.name.0 = Processes
 wizard.description.0 = Export processes to EcoSpold1 xml files
-wizard.name.1 = LCIA methods
-wizard.description.1 = Export LCIA methods to EcoSpold1 xml files
+wizard.name.1 = Impact methods
+wizard.description.1 = Export impact methods to EcoSpold1 xml files
 wizard.name.2 = ILCD
 wizard.description.2 = Import a zip file containing ILCD xml files
 wizard.name.3 = Processes
@@ -73,7 +73,7 @@ number.format.page.name=Number format
 model.category.name = Actors
 model.category.name.0 = Flows
 model.category.name.1 = Flow properties
-model.category.name.2 = LCIA methods
+model.category.name.2 = Impact methods
 model.category.name.3 = Product systems
 model.category.name.4 = Projects
 model.category.name.5 = Sources
