--- a/olca-app/OSGI-INF/l10n/bundle_de.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_de.properties
@@ -36,17 +36,17 @@ introTitle = Willkommen in openLCA!
 #model category labels
 model.category.name.0=Fl\u00FCsse
 model.category.name=Personen
-model.category.name.8=LCIA Ergebnisse
+model.category.name.8=Wirkungsergebnisse
 model.category.name.7=Prozesse
 model.category.name.6=Einheitengruppen
 model.category.name.5=Quellen
 model.category.name.4=Projekte
 model.category.name.3=Produktsysteme
-model.category.name.2=LCIA Methoden
+model.category.name.2=Wirkungsmethoden
 model.category.name.1=Flusseigenschaften
 
 category.name.0=ILCD
-wizard.name.1=LCIA Methoden
+wizard.name.1=Wirkungsmethoden
 wizard.name.0=Prozesse
 wizard.name=EcoSpold
 Sources=Quellen
@@ -56,7 +56,7 @@ wizard.description.5=Exportiere Flusseigenschaften in ILCD xml Dateien
 wizard.description.4=Exportiere Fl\u00FCsse in ILCD xml Dateien
 wizard.description.3=Exportiere Prozesse in ILCD xml Dateien
 wizard.description.2=Importiere eine Zip-Datei die ILCD xml-Dateien enth\u00E4lt
-wizard.description.1=Exportiere LCIA Methoden in EcoSpold1 xml Dateien
+wizard.description.1=Exportiere Wirkungsmethoden in EcoSpold1 xml Dateien
 wizard.description.0=Exportiere Prozesse in EcoSpold1 xml Dateien
 Actors=Personen
 ilcd.import.description=Importiert ILCD Datens\u00E4tze aus einem ILCD Packet
