Added new impact method editor

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -457,7 +457,7 @@ Methods_RemoveNormalizationWeightingSet = Remove selected normalization/weightin
 
 Methods_SelectImpactCategory = Select an impact category
 
-Methods_Value = Value
+Methods_Factor = Factor
 
 Methods_WeightingFactor = Weighting factor
 
