--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -457,7 +457,7 @@ Methods_RemoveNormalizationWeightingSet = Ausgew\u00E4hltes Normalisierungs-/Gew
 
 Methods_SelectImpactCategory = W\u00E4hle eine Wirkungskategorie aus
 
-Methods_Value = Wert
+Methods_Factor = Faktor
 
 Methods_WeightingFactor = Gewichtungsfaktor
 
