Added new process editor

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -28,6 +28,7 @@ Amount=Amount
 AsDefinedInProcesses=As defined in processes
 Author=Author
 AvoidedProduct=Avoided product
+AvoidedProducts=Avoided products
 Button_No=No
 Button_Yes=Yes
 Calculate=Calculate
@@ -120,6 +121,7 @@ DistributionValues=Distribution values
 Doi=Doi
 DrawChart=Draw chart...
 EMail=e-mail
+Emissions=Emissions
 EcoSpold01ImportWizard_SelectCategory=Select an import category for processes
 EcoSpoldCreatingFolder=Creating ecoSpold folder
 EcoSpoldExportActionText=Export to EcoSpold1
@@ -362,6 +364,7 @@ Processes_WizardMessage=Creates a new process
 Processes_WizardTitle=New process
 ProducedBy=Produced by
 ProductFlow=Product
+Products=Products
 ProductSystem=Product system
 ProductSystemCleaner_Analizing=Analyzing product system...
 ProductSystemCleaner_ProblemText=Process {0} is not linked to the reference process of the product system or will not be considered in the calculation for other reasons. It has to be removed for calculation
@@ -399,6 +402,7 @@ RemoveUnitText=Remove selected unit
 Reserve=Reserve the following amount of memory for openLCA
 Reserved={0} is a reserved word and can not be used.
 Reset=Reset
+Resources=Resources
 Rest=Other
 ResultContributions=Result contributions
 ResultOf=Analysis result of
@@ -574,6 +578,7 @@ ValueViewMode=Value view
 Version=Version
 Warning=Warning
 WasteFlow=Waste
+Wastes=Wastes
 WebSite=Website
 Weekly=Weekly
 WeightedResults=Weighted results
