--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -28,6 +28,7 @@ Amount=Menge
 AsDefinedInProcesses=Aus Prozessen \u00FCbernehmen
 Author=Autor
 AvoidedProduct=\u00C4quivalenzprodukt
+AvoidedProducts=\u00C4quivalenzprodukte
 Button_No=Nein
 Button_Yes=Ja
 Calculate=Berechnen
@@ -120,6 +121,7 @@ DistributionValues=Verteilungswerte
 Doi=Doi
 DrawChart=Zeichne Diagramm...
 EMail=E-Mail
+Emissions=Emissionen
 EcoSpold01ImportWizard_SelectCategory=Bitte w\u00E4hlen Sie eine Prozesskategorie f\u00FCr den Import aus
 EcoSpoldCreatingFolder=Erstelle ecoSpold-Ordner
 EcoSpoldEcoSpoldExportWizard_WindowTitle=EcoSpold exportieren
@@ -362,6 +364,7 @@ Processes_WizardMessage=Erstellt einen neuen Prozess
 Processes_WizardTitle=Neuer Prozess
 ProducedBy=Produziert von
 ProductFlow=Produkt
+Products=Produkte
 ProductSystem=Produktsystem
 ProductSystemCleaner_Analizing=Analysiere Produktsystem...
 ProductSystemCleaner_ProblemText=Prozess {0} ist nicht zum Referenzprodukt verlinkt oder wird aus anderen Gr\u00FCnden nicht bei der Berechnung ber\u00FCcksichtigt. Der Prozess muss f\u00FCr die Berechnung entfernt werden
@@ -399,6 +402,7 @@ RemoveUnitText=Entferne ausgew\u00E4hlte Einheit
 Reserve=Reserviere folgende Menge Arbeitsspeicher f\u00FCr openLCA
 Reserved={0} ist ein reserviertes Wort und kann nicht benutzt werden.
 Reset=Zur\u00FCcksetzen
+Resources=Resourcen
 Rest=Rest
 ResultContributions=Ergebnisbeitr\u00E4ge
 ResultOf=Analysenergebnis von
@@ -574,6 +578,7 @@ ValueViewMode=Werteansicht
 Version=Version
 Warning=Warnung
 WasteFlow=Abfall
+Wastes=Abf\u00c4lle
 WebSite=Webseite
 Weekly=wöchentlich
 WeightedResults=Gewichtete Ergebnisse
