Added product system editor (without graphical editor)

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -364,6 +364,7 @@ Processes_WizardMessage=Creates a new process
 Processes_WizardTitle=New process
 ProducedBy=Produced by
 ProductFlow=Product
+Product=Product
 Products=Products
 ProductSystem=Product system
 ProductSystemCleaner_Analizing=Analyzing product system...
@@ -383,6 +384,7 @@ ProviderOutput=provider output
 Publication=Publication
 QuantitativeReference=Quantitative reference
 RecipientInput=recipient input
+ReferenceExchange=Reference product
 ReferenceFlowProperty=Reference flow property
 ReferenceProcess=Reference process
 ReferenceUnit=Reference unit
@@ -514,10 +516,9 @@ Systems_ProcessLinkCreateCommand_Text=create processlink
 Systems_ProcessLinkDeleteCommand_Text=delete processlink
 Systems_ProcessLinkReconnectCommand_Text=reconnect processlink
 Systems_ProductSystemGraphEditor_FilterLabel=Select process (*
-Systems_ProductSystemInfoSectionLabel=Additional information
+Systems_ProductSystemInfoSectionLabel=Reference
 Systems_Providers=providers
 Systems_Recipients=recipients
-Systems_ReferenceExchange=Reference exchange
 Systems_Remember=Remember decision
 Systems_RemoveConnectionsFromProcessAction_Text=Remove connections
 Systems_RemoveSupplyChainAction_Text=Remove supply chain
