--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -364,6 +364,7 @@ Processes_WizardMessage=Erstellt einen neuen Prozess
 Processes_WizardTitle=Neuer Prozess
 ProducedBy=Produziert von
 ProductFlow=Produkt
+Product=Produkt
 Products=Produkte
 ProductSystem=Produktsystem
 ProductSystemCleaner_Analizing=Analysiere Produktsystem...
@@ -383,6 +384,7 @@ ProviderOutput=Provideroutput
 Publication=Publikation
 QuantitativeReference=Quantitative Referenz
 RecipientInput=Empf\u00E4ngerinput
+ReferenceExchange=Referenzproduct
 ReferenceFlowProperty=Referenzflusseigenschaft
 ReferenceProcess=Referenzprozess
 ReferenceUnit=Referenzeinheit
@@ -514,10 +516,9 @@ Systems_ProcessLinkCreateCommand_Text=Prozessverbindung erstellen
 Systems_ProcessLinkDeleteCommand_Text=Prozessverbindung l\u00F6schen
 Systems_ProcessLinkReconnectCommand_Text=Prozessverbindung \u00E4ndern
 Systems_ProductSystemGraphEditor_FilterLabel=W\u00E4hle einen Prozess (*
-Systems_ProductSystemInfoSectionLabel=Zus\u00E4tzliche Informationen
+Systems_ProductSystemInfoSectionLabel=Referenz
 Systems_Providers=Provider
 Systems_Recipients=Empf\u00E4nger
-Systems_ReferenceExchange=Referenzfluss
 Systems_Remember=Entscheidung merken
 Systems_RemoveConnectionsFromProcessAction_Text=Entferne Verbindungen
 Systems_RemoveSupplyChainAction_Text=Vorkette entfernen
