embedded the calculation action

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -33,7 +33,7 @@ Button_No=No
 Button_Yes=Yes
 Calculate=Calculate
 CalculateCosts=Calculate costs
-Calculating=Calculating aggregated results
+Calculating=Calculating results
 CalculatingImpact=Calculating impact result
 CalculatingLCI=Calculating LCI result
 CalculationMethod=Calculation method
