new parameter table in process editor

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -575,6 +575,7 @@ Usage=Usage
 UsageOf=Usage of
 UsedInProcesses=Used in processes
 Username=User
+Value=Value
 ValueViewMode=Value view
 Version=Version
 Warning=Warning
