--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -575,6 +575,7 @@ Usage=Verwendung
 UsageOf=Verwendung von
 UsedInProcesses=Wird in Prozessen verwendet
 Username=Benutzername
+Value=Wert
 ValueViewMode=Werteansicht
 Version=Version
 Warning=Warnung
