new product system parameter page

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -342,6 +342,7 @@ OrderBy=Order by
 Outputs=Outputs
 OverwriteFileQuestion=The selected file already exists. Do you want to overwrite it?
 Parameter=Parameter
+Parameters=Parameters
 ParameterAlreadyDefined=The parameter is already defined
 ParametersPageLabel=Parameters
 ParametersPreferencePage_BottomUp=Bottom up
