--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -342,6 +342,7 @@ OrderBy=Sortiere nach
 Outputs=Outputs
 OverwriteFileQuestion=Die ausgew\u00E4hlte Datei existiert bereits. Wollen Sie diese \u00FCberschreiben?
 Parameter=Parameter
+Parameters=Parameter
 ParameterAlreadyDefined=Der Parameter ist bereits definiert
 ParametersPageLabel=Parameter
 ParametersPreferencePage_BottomUp=Von unten
