common inventory result page for analysis and quick results

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -473,6 +473,7 @@ Sources_WizardTitle=New source
 StandardDeviation=Standard deviation
 Start=Start
 StartDate=Start date
+SubCategory=Sub-category
 SwitchViewModeActionText=Switch view mode
 Synonyms=Synonyms
 SystemProcess=System process
