--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -473,6 +473,7 @@ Sources_WizardTitle=Neue Quelle
 StandardDeviation=Standardabweichung
 Start=Start
 StartDate=Startdatum
+SubCategory=Sub-Kategorie
 SwitchViewModeActionText=Ansicht wechseln
 Synonyms=Synonyme
 SystemProcess=Systemprozess
