use new product system builder

--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -65,7 +65,7 @@ ChooseFileNameLabel=Dateinamen w\u00E4hlen
 City=Stadt
 Code=Code
 Comment=Kommentar
-CompareProductSystemsForMethod=Vergleiche Productsysteme f\u00FCr Wirkungsmethode {0}
+CompareProductSystemsForMethod=Vergleiche Produktsysteme f\u00FCr Wirkungsmethode {0}
 CompleteRefData=Alle Referenzdaten
 Connect=Verbinden...
 Connecting=Verbinde zu
