new database import action

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -150,8 +150,7 @@ Export=Export
 ExportTitle=openLCA product system export
 ExportTo=Exporting to {0}
 ExportToExcel=Export to Excel
-ExportToScript=Export database
-ExportingToScript=Exporting database {0}
+ExportDatabase=Export database
 Factor=Factor
 FancyToolTip_NoDescription=No description
 FileAlreadyExists=File already exists
@@ -215,8 +214,7 @@ ImpactMethods=Impact methods
 ImpactResultSavedMessage=The result was saved successfully into impact results
 ImpactResultSavedTitle=Impact result saved
 Import=Import
-ImportScript=Import database
-ImportingScript=Importing database
+ImportDatabase=Import database
 Information=Information
 InfrastructureProcess=Infrastructure process
 InputOutputPageLabel=Inputs/Outputs
