--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -150,8 +150,7 @@ Export=Export
 ExportTitle=openLCA Produktsystemexport
 ExportTo=Exportiere nach {0}
 ExportToExcel=Export nach Excel
-ExportToScript=Exportiere Datenbank
-ExportingToScript=Exportiere Datenbank {0}
+ExportDatabase=Exportiere Datenbank
 Factor=Faktor
 FancyToolTip_NoDescription=Keine Beschreibung
 FileAlreadyExists=Die Datei existiert bereits
@@ -215,8 +214,7 @@ ImpactMethods=Wirkungsmethoden
 ImpactResultSavedMessage=Das Ergebnis wurde erfolgreich unter Wirkungsergebnisse gespeichert
 ImpactResultSavedTitle=Wirkungsergebnis gespeichert
 Import=Import
-ImportScript=openLCA Skript importieren
-ImportingScript=Importiere Datenbank
+ImportDatabase=Datenbank importieren
 Information=Information
 InfrastructureProcess=Infrastruktur Prozess
 InputOutputPageLabel=Inputs/Outputs
