smaller fixes in the user interface

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -263,6 +263,7 @@ Methods_WizardTitle=New impact method
 Minimum=Minimum
 MinimumCharactersError=Name must be at least 4 characters.
 Mode=Mode
+ModelGraph=Model graph
 ModelParametersPageDuplicateParameter=Duplicate parameter
 ModelingAndValidationPageLabel=Modeling and validation
 ModelingConstants=Modeling constants
