--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -263,6 +263,7 @@ Methods_WizardTitle=Neue Wirkungsmethode
 Minimum=Minimum
 MinimumCharactersError=Name muss mindestens 4 Zeichen lang sein
 Mode=Modus
+ModelGraph=Modellgraph
 ModelParametersPageDuplicateParameter=Doppelte Parameter
 ModelingAndValidationPageLabel=Modellierung und Validierung
 ModelingConstants=Modelierungskonstanten
