improved titles in model selection dialog

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,6 +1,6 @@
 AccessAndUseRestrictions=Access and use restrictions
 Actor=Actor
-Actors=actors
+Actors=Actors
 Actors_WizardMessage=Creates a new actor
 Actors_WizardTitle=New actor
 Add=Add
@@ -161,7 +161,7 @@ FileImportPage_Title=Select import files
 Flow=Flow
 FlowContributions=Flow contributions
 FlowInfoPage_CASNotValid=CAS number is not valid
-FlowProperties=flow properties
+FlowProperties=Flow properties
 FlowPropertiesPageLabel=Flow properties
 FlowProperty=Flow property
 FlowProps_EmptyUnitGroupError=No unit group selected
@@ -207,10 +207,10 @@ ImpactCategories=Impact categories
 ImpactCategory=Impact category
 ImpactContributions=Impact contributions
 ImpactFactors=Impact factors
-ImpactMethod=Impact method
+ImpactMethod=Impact assessment method
 ImpactMethodTitle=Impact method
 ImpactMethodUsed=Impact Method used
-ImpactMethods=Impact methods
+ImpactMethods=Impact assessment methods
 ImpactResultSavedMessage=The result was saved successfully into impact results
 ImpactResultSavedTitle=Impact result saved
 Import=Import
@@ -370,10 +370,11 @@ ProductSystem=Product system
 ProductSystemCleaner_Analizing=Analyzing product system...
 ProductSystemCleaner_ProblemText=Process {0} is not linked to the reference process of the product system or will not be considered in the calculation for other reasons. It has to be removed for calculation
 ProductSystemCleaner_Title=Clean up product system
-ProductSystems=product systems
+ProductSystems=Product systems
 ProductSystemsInfoSectionLabel=Product systems
 Progress=Progress
 Project=Project
+Projects=Projects
 ProjectComparisonPageLabel=Comparison
 ProjectInfoSectionLabel=Time and author
 Projects_WizardMessage=Creates a new project
@@ -465,7 +466,7 @@ SingleScoreResult=Single score results
 SingleScoreTitle=Single score results for {0}
 Source=Source
 SourceInfoSectionLabel=Additional information
-Sources=sources
+Sources=Sources
 SourcesInfoSectionLabel=Sources
 Sources_WizardMessage=Creates a new source
 Sources_WizardTitle=New source
@@ -560,7 +561,7 @@ UnitExistsError=Unit already exists in unit group {0}
 UnitExistsMessage=Unit {0} already exists in unit group {1}
 UnitGroup=Unit group
 UnitGroupInfoSectionLabel=Units
-UnitGroups=unit groups
+UnitGroups=Unit groups
 UnitMappingPage_CheckingUnits=Searching for units...
 UnitMappingPage_Description=Please select the flow property to which a unit should belong for the import process, and assign a conversion factor if unit is new.
 UnitMappingPage_Title=Assign units
