--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -374,6 +374,7 @@ ProductSystems=Produktsysteme
 ProductSystemsInfoSectionLabel=Produktsysteme
 Progress=Fortschritt
 Project=Projekt
+Projects=Projekte
 ProjectComparisonPageLabel=Vergleich
 ProjectInfoSectionLabel=Zeit und Autor
 Projects_WizardMessage=Erstellt ein neues Projekt
