added filter texts in process and product system wizards

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -158,6 +158,7 @@ FileImportPage_ChooseDirectoryButton=Choose directory...
 FileImportPage_ChooseDirectoryLabel=From directory:
 FileImportPage_Description=Please select the files to import into openLCA
 FileImportPage_Title=Select import files
+Filter=Filter
 Flow=Flow
 FlowContributions=Flow contributions
 FlowInfoPage_CASNotValid=CAS number is not valid
