--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -158,6 +158,7 @@ FileImportPage_ChooseDirectoryButton=Verzeichnis ausw\u00E4hlen...
 FileImportPage_ChooseDirectoryLabel=Aus Verzeichnis\:
 FileImportPage_Description=Bitte w\u00E4hlen Sie die Dateien aus die Sie nach openLCA importieren wollen
 FileImportPage_Title=Importdateien ausw\u00E4hlen
+Filter=Filter
 Flow=Fluss
 FlowContributions=Flussbeitr\u00E4ge
 FlowInfoPage_CASNotValid=CAS Nummer ung\u00FCltig
