creation of product systems from processes via a single click

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -78,6 +78,7 @@ Copyright=Copyright
 Country=Country
 CreateDatabaseAction=Create new database
 CreateProductFlow=Create a new product flow for the process
+CreateProductSystem=Create product system
 CreatingImpactSheet=Creating impact sheets
 CreatingInfoSheet=Creating info sheet
 CreatingLCISheet=Creating LCI sheet
