--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -78,6 +78,7 @@ Copyright=Copyright
 Country=Land
 CreateDatabaseAction=Neue Datenbank erstellen
 CreateProductFlow=Einen neuen Produktfluss f\u00FCr den Prozess erstellen
+CreateProductSystem=Neues Productsystem
 CreatingImpactSheet=Erstelle Impact-Sheets
 CreatingInfoSheet=Erstelle Info-Sheet
 CreatingLCISheet=Erstelle LCI-Sheet
