added default calculation for allocation factors

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -33,6 +33,7 @@ Button_No=No
 Button_Yes=Yes
 Calculate=Calculate
 CalculateCosts=Calculate costs
+CalculateDefaults=Calculate default values
 Calculating=Calculating results
 CalculatingImpact=Calculating impact result
 CalculatingLCI=Calculating LCI result
@@ -103,7 +104,7 @@ DatabaseUpdate_Message=The following databases need an update:
 DatabaseUpdate_Running=Update running...
 DatabaseUpdate_Title=Database updates
 DatasetOtherEvaluation=Data set other evaluation
-DefaultAMSectionLabel=Allocation
+DefaultMethod=Default method
 DefaultFlowProperty=Default flow property
 DefaultProvider=Default provider
 Delete=Delete
