--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -33,6 +33,7 @@ Button_No=Nein
 Button_Yes=Ja
 Calculate=Berechnen
 CalculateCosts=Kostenberechnung
+CalculateDefaults=Default-Werte berechnen
 Calculating=Berechne aggregierte Ergebnisse
 CalculatingImpact=Berechne Wirkungsergebnisse
 CalculatingLCI=Berechne LCI Ergebnisse
@@ -103,7 +104,7 @@ DatabaseUpdate_Message=Die folgenden Datenbanken ben\u00F6tigen ein Update:
 DatabaseUpdate_Running=Update l\u00E4uft...
 DatabaseUpdate_Title=Datenbankupdate
 DatasetOtherEvaluation=Andere Auswertungen des Datensatzes
-DefaultAMSectionLabel=Allokation
+DefaultMethod=Default-Methode
 DefaultFlowProperty=Standardflusseigenschaft
 DefaultProvider=Lieferprozess
 Delete=L\u00F6schen
