same import/export actions in main menu and navigation menu

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -77,7 +77,6 @@ Copy=Copy
 Copying=Copying object
 Copyright=Copyright
 Country=Country
-CreateDatabaseAction=Create new database
 CreateProductFlow=Create a new product flow for the process
 CreateProductSystem=Create product system
 CreatingImpactSheet=Creating impact sheets
@@ -301,7 +300,7 @@ Never=Never
 NewCategoryDialogDefault=new category
 NewCategoryDialogText=Please enter the name of the new category:
 NewCategoryDialogTitle=New category
-NewDatabase=New Database
+NewDatabase=New database
 NewDatabase_AlreadyExists=A database with this name already exists
 NewDatabase_Create=Create database
 NewDatabase_Description=Create a new database
