added link to online help, removed unused menu entries

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -331,6 +331,7 @@ NumberFormatPage_NumberOfPlaces=Number of decimal places
 NumericValue=Numeric value
 Object=Object
 ObjectType=Object type
+OnlineHelp=Online help
 OnlyNumbersLetters=Only numbers and letters are allowed.
 Open=Open
 OpenAnalyzeWizard_Text=Analyze results...
