--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -331,6 +331,7 @@ NumberFormatPage_NumberOfPlaces=Anzahl der Dezimalstellen
 NumericValue=Numerischer Wert
 Object=Objekt
 ObjectType=Typ
+OnlineHelp=Online-Hilfe
 OnlyNumbersLetters=Es sind nur Zahlen und Buchstaben erlaubt.
 Open=\u00D6ffnen
 OpenAnalyzeWizard_Text=Ergebnisse analysieren...
