import / export label; total contribution as color in Sankey diagram

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -147,7 +147,7 @@ EvaluationSectionLabel=Process evaluation and validation
 Exchange=exchange
 ExchangeType=Flow type
 Exchanges=exchanges
-Export=Export
+Export=Export...
 ExportTitle=openLCA product system export
 ExportTo=Exporting to {0}
 ExportToExcel=Export to Excel
@@ -215,7 +215,7 @@ ImpactMethodUsed=Impact Method used
 ImpactMethods=Impact assessment methods
 ImpactResultSavedMessage=The result was saved successfully into impact results
 ImpactResultSavedTitle=Impact result saved
-Import=Import
+Import=Import...
 ImportDatabase=Import database
 Information=Information
 InfrastructureProcess=Infrastructure process
