--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -147,7 +147,7 @@ EvaluationSectionLabel=Prozess Auswertung und Validierung
 Exchange=Fluss
 ExchangeType=Flusstyp
 Exchanges=Inputs / Outputs
-Export=Export
+Export=Export...
 ExportTitle=openLCA Produktsystemexport
 ExportTo=Exportiere nach {0}
 ExportToExcel=Export nach Excel
@@ -215,7 +215,7 @@ ImpactMethodUsed=Angewendete Wirkungsmethode
 ImpactMethods=Wirkungsmethoden
 ImpactResultSavedMessage=Das Ergebnis wurde erfolgreich unter Wirkungsergebnisse gespeichert
 ImpactResultSavedTitle=Wirkungsergebnis gespeichert
-Import=Import
+Import=Import...
 ImportDatabase=Datenbank importieren
 Information=Information
 InfrastructureProcess=Infrastruktur Prozess
