added result info page for quick results

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -414,7 +414,7 @@ ResultContributions=Result contributions
 ResultOf=Analysis result of
 ResultingAmount=Resulting amount
 Results=Results
-ResultsOf=Results of {0}
+ResultsOf=Results of
 Reviewer=Reviewer
 Sampling=Sampling procedure
 Sankey_ActionText=Set sankey diagram options
