--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -414,7 +414,7 @@ ResultContributions=Ergebnisbeitr\u00E4ge
 ResultOf=Analysenergebnis von
 ResultingAmount=Ergebnismenge
 Results=Ergebnisse
-ResultsOf=Ergebnisse von {0}
+ResultsOf=Ergebnisse f\u00FCr
 Reviewer=Gutachter
 Sampling=Stichprobenverfahren
 Sankey_ActionText=Sankey Diagram Optionen
