new database import wizard

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -96,6 +96,8 @@ DataSetOwner=Data set owner
 DataSourceInfoSectionLabel=Data source information
 DataTreatment=Data treatment
 Database=Database
+DatabaseImport=Database import
+DatabaseImportDescription=Imports data from an existing database into the active database
 DatabaseParametersPreferencePage_ErrorText=One or more errors are caused by changing the database parameters. Therefore the changes cannot be saved. What do you want to do?
 DatabaseParametersPreferencePage_ErrorsOccured=Errors occurred
 DatabaseParametersPreferencePage_Restore=Restore
