--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -594,3 +594,5 @@ WeightingOf=Gewichtung von {0}
 WritingIntoFile=Schreibe in Datei
 Year=Jahr
 ZipCode=PLZ
+DatabaseImport=Datenbankimport
+DatabaseImportDescription=Importiert Daten aus einer bestehenden Datenbank in die aktive Datenbank
